# Need Poetry, because setuptools cannot handle extra sources, it seems
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
#[project]
name = "ga4qc"
version = "0.3.0"
description = "genetic algorithms for quantum circuits"
license = "MIT"
authors = [
    "Christoph Stein <christoph.stein@jku.at>",
    "Stefan Klikovits <stefan@klikovits.net>",
]
readme = "README.md"
homepage = "https://github.com/westoun/ga4qc"
repository = "https://github.com/westoun/ga4qc"
documentation = "https://github.com/westoun/ga4qc"
keywords = ["genetic algorithms", "moo", "search-based optimization", "quantum computing", "quantum circuits"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/westoun/ga4qc/issues"

[tool.poetry.dependencies]
python = "^3.10"
deap = "1.4.2"
numpy = "2.2.1"
quasim = "1.0.0"
scipy = "1.15.1"


# Tests
pytest = {version = "*", optional = true }

[tool.poetry.extras]
test = ["pytest"]

[tool.black]
line-length=127

[tool.pylint.format]
max-line-length = "127"

[tool.isort]
profile = "black"
multi_line_output = 3